        - Submit, Cancel buttons working as expected
-  F-US-#5 (for user story 5): "Finish" reservation
        - A "Seat" button only displays for a reservation
          with status "Booked", and a "Booked" reservation
          displays a "Finish" button. Reservations that are
          not "Booked" or "Finished" will not display.
        - Table list is refreshed after a reservation is
          either "Booked" or "Finished."
- F-US-#6: user story #6 - add status column for each reservation 
  on the dashboard. Only "booked" and "seated" columns display.
- F-US-#7: user story #7 - created Search feature to allow a
        search by mobile number. Search will display a reservation 
        with a mobile number matching any part of the input.
        - If no numbers in the reservations table match any
          part of the input, "No reservations found" is returned.
          If any numbers are found, they are returned and
          displayed in the same table format that appears
          on the Dashboard page.
        - On submit, the input form is cleared.
-F-US-#8: user story #8 - add "edit reservation" feature. 
        - An Edit button is displayed on every reservation on both
        Dashboard and Search pages, but is disabled unless
        reservation has status: "booked". Clicking "Edit" allows
        user to update the information in the reservation and
        save the updated data to the database. 
        - A Cancel button is also displayed on every reservation
        on both Dashboard and Search pages, but is disabled unless 
        reservation has status: "booked." Clicking "Cancel" allows
        user to cancel the reservation (changes the status to
        "cancelled") and returns to the previous page.
        - Updated "Finish" button to display in the Tables section
        and be visible only if a table is occupied.
        - Updated "Seat" button to be disabled unless the table has
        status "booked."